# midi_splitter

./: Cargo.toml  README.md  index.html  package-lock.json  tailwind.config.js
src/: main.rs
